[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scenes/Lives.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dialogarea.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Dialog.gd" type="Script" id=3]
[ext_resource path="res://Scenes/takeIt.gd" type="Script" id=4]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/StaapStart.gd" type="Script" id=6]
[ext_resource path="res://Scenes/QuestionArea.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Uduekraan.gd" type="Script" id=8]
[ext_resource path="res://Assets/infovaade/ram.png" type="Texture" id=9]
[ext_resource path="res://Assets/jupid/ram-2.png" type="Texture" id=10]
[ext_resource path="res://Assets/infovaade/prose.png" type="Texture" id=11]
[ext_resource path="res://Assets/jupid/toiteplokk.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/syda.png" type="Texture" id=13]
[ext_resource path="res://Assets/infovaade/klaviatuur.png" type="Texture" id=14]
[ext_resource path="res://Assets/infovaade/hdd.png" type="Texture" id=15]
[ext_resource path="res://Assets/infovaade/toide.png" type="Texture" id=16]
[ext_resource path="res://Assets/jupid/klaviatuur.png" type="Texture" id=17]
[ext_resource path="res://Assets/jupid/hdd-2.png" type="Texture" id=18]
[ext_resource path="res://Assets/jupid/hiir-1.png" type="Texture" id=19]
[ext_resource path="res://Assets/jupid/prose.png" type="Texture" id=20]
[ext_resource path="res://Assets/infovaade/sisenemine_01.webm" type="VideoStream" id=21]
[ext_resource path="res://Piano.tres" type="Animation" id=22]
[ext_resource path="res://Assets/infovaade/sisenemine_02.webm" type="VideoStream" id=23]
[ext_resource path="res://stumble.tres" type="Animation" id=24]
[ext_resource path="res://Scenes/inTheBag.gd" type="Script" id=25]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=26]
[ext_resource path="res://Scenes/QuestionArea.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scenes/takeIt.tscn" type="PackedScene" id=28]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.329412, 0.721569, 0.960784, 0.360784 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0980392, 0.101961, 0.537255, 0.215686 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 0, 0, 0, 0.168627 )
shadow_size = 3
shadow_offset = Vector2( -3, -3 )

[sub_resource type="OpenSimplexNoise" id=3]

[sub_resource type="NoiseTexture" id=4]
noise = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.313726, 0.168627, 0.254902, 0.364706 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0980392, 0.101961, 0.537255, 0.215686 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 0, 0, 0, 0.168627 )
shadow_size = 3
shadow_offset = Vector2( -3, -3 )

[sub_resource type="Animation" id=8]
resource_name = "startScreen"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel_V:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1.8025, 0.466516 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel_V:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.8 ),
"transitions": PoolRealArray( 1, 0.392292 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel_V/VBoxContainer/Syda1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel_V/VBoxContainer/Syda2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel_V/VBoxContainer/Syda3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel_V/VBoxContainer/Syda4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel_V/VBoxContainer/Syda5:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "yellowlabels"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../YellowNotes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 4.92457, 2.54912, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../YellowNotes:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0 ]
}

[node name="GUI" type="CanvasLayer"]

[node name="Staap" type="Node2D" parent="."]
pause_mode = 2

[node name="StaapStart" type="VideoPlayer" parent="Staap"]
visible = false
margin_right = 1283.0
margin_bottom = 723.0
stream = ExtResource( 21 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU" type="Sprite" parent="Staap"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 11 )

[node name="RAM" type="Sprite" parent="Staap"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 9 )

[node name="HDD" type="Sprite" parent="Staap"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 15 )

[node name="PSU" type="Sprite" parent="Staap"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 16 )

[node name="Keyboard" type="Sprite" parent="Staap"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 14 )

[node name="StaapStart_Keyb" type="VideoPlayer" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 23 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="." instance=ExtResource( 26 )]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_V" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 16.0
margin_top = 16.0
margin_right = 219.0
margin_bottom = 60.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_V"]
margin_left = 16.0
margin_top = 24.0
margin_right = 16.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Syda1" type="Sprite" parent="Panel_V/VBoxContainer"]
visible = false
position = Vector2( 15.75, -1.25 )
scale = Vector2( 0.609589, 0.5 )
texture = ExtResource( 13 )

[node name="Syda2" type="Sprite" parent="Panel_V/VBoxContainer"]
visible = false
position = Vector2( 50, -1 )
scale = Vector2( 0.609589, 0.5 )
texture = ExtResource( 13 )

[node name="Syda3" type="Sprite" parent="Panel_V/VBoxContainer"]
visible = false
position = Vector2( 84, -1 )
scale = Vector2( 0.609589, 0.5 )
texture = ExtResource( 13 )

[node name="Syda4" type="Sprite" parent="Panel_V/VBoxContainer"]
visible = false
position = Vector2( 119, -1 )
scale = Vector2( 0.61, 0.5 )
texture = ExtResource( 13 )

[node name="Syda5" type="Sprite" parent="Panel_V/VBoxContainer"]
visible = false
position = Vector2( 153.875, -1 )
scale = Vector2( 0.606164, 0.5 )
texture = ExtResource( 13 )

[node name="Panel_P" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_P"]
margin_left = 744.0
margin_right = 984.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionArea" type="ColorRect" parent="." instance=ExtResource( 27 )]
pause_mode = 2
visible = false
margin_left = 576.0
margin_top = 232.0
margin_right = 748.0
margin_bottom = 309.0
input_pass_on_modal_close_click = false
color = Color( 0.254902, 0.152941, 0.0705882, 0.862745 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogarea" type="Polygon2D" parent="."]
pause_mode = 2
visible = false
position = Vector2( 70, 496 )
color = Color( 0.207843, 0.027451, 0.027451, 0.443137 )
polygon = PoolVector2Array( 186, 80, 954, 80, 954, 208, 186, 208 )
script = ExtResource( 2 )

[node name="Dialog" type="RichTextLabel" parent="Dialogarea"]
margin_left = 194.0
margin_top = 88.0
margin_right = 946.0
margin_bottom = 200.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Dialogarea"]
wait_time = 0.02
autostart = true

[node name="Button" type="Button" parent="Dialogarea"]
margin_left = 858.0
margin_top = 152.0
margin_right = 940.0
margin_bottom = 192.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesNo" type="PopupMenu" parent="."]
margin_left = -96.5385
margin_top = -153.365
margin_right = 3.46155
margin_bottom = -53.365
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Uduekraan" type="TextureRect" parent="."]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.254902, 0.027451, 0.027451, 1 )
margin_left = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = SubResource( 4 )
expand = true
stretch_mode = 7
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Uduekraan"]
wait_time = 4.0
one_shot = true

[node name="inTheBag" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1084.0
margin_top = 82.0
margin_right = 1094.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( -481, 259 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 20 )

[node name="RAM" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( -464.438, 257.813 )
scale = Vector2( 0.0510937, 0.0429688 )
texture = ExtResource( 10 )

[node name="HDD" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( -478, 314 )
scale = Vector2( 0.0544662, 0.0554403 )
texture = ExtResource( 18 )

[node name="PSU" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( -482, 319 )
scale = Vector2( 0.194824, 0.172363 )
texture = ExtResource( 12 )

[node name="Keyboard" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( -489, 331 )
scale = Vector2( 0.207031, 0.238281 )
texture = ExtResource( 17 )

[node name="Mouse" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 64, 56 )
scale = Vector2( 0.242331, 0.172273 )
texture = ExtResource( 19 )

[node name="Cooler" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 15, 0 )

[node name="GPU" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 15, 0 )

[node name="Soundcard" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 15, 0 )

[node name="Speaker" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 15, 0 )

[node name="Mic" type="Sprite" parent="inTheBag" groups=["components"]]
visible = false
position = Vector2( 15, 0 )

[node name="Animations" type="AnimationPlayer" parent="."]
autoplay = "startScreen"
anims/startScreen = SubResource( 8 )
anims/stumble = ExtResource( 24 )
anims/toTheBag = ExtResource( 22 )
anims/yellowlabels = SubResource( 9 )

[node name="takeIt" type="ColorRect" parent="." instance=ExtResource( 28 )]
pause_mode = 2
visible = false
anchor_right = 0.3
anchor_bottom = 0.356
margin_left = 464.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = 151.68
color = Color( 1, 1, 1, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="Staap/StaapStart" to="Staap/StaapStart" method="_on_StaapStart_finished"]
[connection signal="on_dialog" from="QuestionArea" to="Dialogarea/Dialog" method="_on_QuestionArea_on_dialog"]
[connection signal="dialog_start" from="Dialogarea" to="Dialogarea/Dialog" method="_on_Dialogarea_dialog_start"]
[connection signal="timeout" from="Dialogarea/Timer" to="Dialogarea/Dialog" method="_on_Timer_timeout"]
[connection signal="pressed" from="Dialogarea/Button" to="Dialogarea/Dialog" method="_on_Button_pressed"]
[connection signal="flytoBag" from="takeIt" to="inTheBag" method="_on_takeIt_flytoBag"]
