[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/takeIt.gd" type="Script" id=1]
[ext_resource path="res://bit_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.164706, 0.164706, 0.498039 )

[node name="takeIt" type="ColorRect"]
anchor_right = 0.225
anchor_bottom = 0.244
margin_right = -288.0
margin_bottom = -175.68
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 270.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 112.0
text = "Take It sisutekst"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Take" type="Button" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 128.0
margin_bottom = 152.0
text = "Võta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="."]
margin_left = 144.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 152.0
text = "Jäta"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Take" to="." method="_on_Take_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
